# redis-cli-rust

./: Cargo.toml  README.md  TODO.md
.github/workflows/: build.yaml
src/: cmd_parser.rs  lib.rs  main.rs  redis_context.rs  redis_funcs.rs
src/redis_funcs/: rediscmd.rs
