[package]
name = "redis-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
redis = { version = "*" }
derivative = { version = "*" }
shell-words = { version = "*" }
atty = { version = "*" }
regex = { version = "*" }